[package]
name = "raytracing"
version = "0.1.0"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
futures = "0.3.5"
glsl-to-spirv = "0.1.7"
bytemuck = "1.2.0"
image = "0.23.4"
cgmath = "0.17.0"


[dependencies.sdl2]
version = "0.34.0"
features = ["raw-window-handle"]