[package]
name = "raytracing"
version = "0.1.2"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.2"
wgpu_glyph = "0.9.0"
futures = "0.3.5"
bytemuck = "1.3.1"
image = "0.23.8"
cgmath = "0.17.0"


[dependencies.sdl2]
version = "0.34.2"
features = ["raw-window-handle"]


[build-dependencies]
shaderc = "0.6.2"